working on /api/matches route
